--- a/doc/ideas.tex
+++ b/doc/ideas.tex
@@ -8,4 +8,12 @@
 
 \section{Ideas}
 
+\subsection{Initial}
+
+
+\begin{itemize}
+   \item Purchase Raspberry Pi Zero
+   \item Purchase Nordic Semiconductor ANT+ chip
+\end{itemize}
+
 \end{document}
