--- a/doc/ideas.tex
+++ b/doc/ideas.tex
@@ -14,6 +14,14 @@
 \begin{itemize}
    \item Purchase Raspberry Pi Zero
    \item Purchase Nordic Semiconductor ANT+ chip
+   \item General steps
+   \begin{enumerate}
+      \item Purchase ANT+ Chip
+      \item Work to adapt a C++ ANT+ library to receive data stream from peripheral devices
+      \item Implement calculations and cycling features
+      \item Design the user interface using QT Creator
+      \item Assemble the hardware  
+   \end{enumerate}
 \end{itemize}
 
 \end{document}
